--- a/api/ProjMan/ProjMan/appsettings.json
+++ b/api/ProjMan/ProjMan/appsettings.json
@@ -5,5 +5,20 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Port=5432;Database=TESTDB;User Id=postgres;Password=qazwsx@123;"
+  },
+  "JwtSettings": {
+    "SecurityKey": "ynHnYm39Z5fc2CrPA5xOnn8ovjozm7ea",
+    "Issuer": "ProjMan",
+    "Audience": "ProjMan",
+    "ValidMinutes": 30
+  },
+  "RefreshTokenSettings": {
+    "ValidMinutes": 720
+  },
+  "PasswordHasherSettings": {
+    "Key": "Kt3MEJ5GDqOwljv8wMz4LaQXL5q3eeNp"
+  }
 }
