--- a/api/ProjMan/ProjMan/ProjMan.csproj
+++ b/api/ProjMan/ProjMan/ProjMan.csproj
@@ -6,4 +6,13 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="MediatR" Version="12.4.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\ProjMan.Application\ProjMan.Application.csproj" />
+    <ProjectReference Include="..\ProjMan.Infrastructure\ProjMan.Infrastructure.csproj" />
+  </ItemGroup>
+
 </Project>
