--- a/api/ProjMan/ProjMan.Application/ProjMan.Application.csproj
+++ b/api/ProjMan/ProjMan.Application/ProjMan.Application.csproj
@@ -21,6 +21,7 @@
 	
   <ItemGroup>
     <Folder Include="Features\Auth\Dtos\" />
+    <Folder Include="Validation\" />
   </ItemGroup>
 
 </Project>
