--- a/projmanweb/package.json
+++ b/projmanweb/package.json
@@ -11,6 +11,7 @@
         "@primevue/themes": "^4.2.4",
         "axios": "^1.7.9",
         "chart.js": "3.3.2",
+        "moment": "^2.30.1",
         "pinia": "^2.3.1",
         "primeicons": "^7.0.0",
         "primevue": "^4.2.4",
